feat(filemanager): add left and right borders to splitbar according to updated designs

--- a/packages/default/scss/filemanager/_layout.scss
+++ b/packages/default/scss/filemanager/_layout.scss
@@ -211,6 +211,9 @@
         flex-shrink: 0;
         display: inline-flex;
         position: relative;
+        border-width: 0 1px;
+        border-style: solid;
+        border-color: inherit;
     }
 
 
