--- a/packages/default/scss/utils/_border.scss
+++ b/packages/default/scss/utils/_border.scss
@@ -26,7 +26,7 @@
         0: 0
     ) !default;
 
-    $utils-border-color: $theme-colors !default;
+    $utils-border-color: $kendo-theme-colors !default;
 
     $utils-border-radius-sides: (
         default: border-radius,
