--- a/packages/material/scss/overlay/_variables.scss
+++ b/packages/material/scss/overlay/_variables.scss
@@ -1,4 +1,4 @@
-$overlay-theme-colors: $theme-colors !default;
+$overlay-theme-colors: $kendo-theme-colors !default;
 
 $overlay-bg: $black !default;
 $overlay-opacity: .32 !default;
