--- a/packages/bootstrap/scss/chip/_variables.scss
+++ b/packages/bootstrap/scss/chip/_variables.scss
@@ -66,10 +66,10 @@ $kendo-chip-base-bg: if( $dark-theme, contrast-wcag($kendo-button-text), $kendo-
 /// @group chip
 $kendo-chip-theme-colors: (
     "base": $kendo-chip-base-bg,
-    "error": map-get( $theme-colors, "error" ),
-    "info": map-get( $theme-colors, "info" ),
-    "warning": map-get( $theme-colors, "warning" ),
-    "success": map-get( $theme-colors, "success" )
+    "error": map-get( $kendo-theme-colors, "error" ),
+    "info": map-get( $kendo-theme-colors, "info" ),
+    "warning": map-get( $kendo-theme-colors, "warning" ),
+    "success": map-get( $kendo-theme-colors, "success" )
 ) !default;
 
 /// The base background color of solid chip.
