--- a/packages/classic/scss/avatar/_variables.scss
+++ b/packages/classic/scss/avatar/_variables.scss
@@ -24,4 +24,4 @@ $kendo-avatar-sizes: (
 
 /// Theme colors map of the avatar.
 /// @group avatar
-$kendo-avatar-theme-colors: $theme-colors !default;
+$kendo-avatar-theme-colors: $kendo-theme-colors !default;
