--- a/packages/default/scss/appbar/_theme.scss
+++ b/packages/default/scss/appbar/_theme.scss
@@ -9,7 +9,7 @@
 
 
     // AppBar theme colors
-    @each $name, $color in $theme-colors {
+    @each $name, $color in $kendo-theme-colors {
         .k-appbar-#{$name} {
             @if $name == "light" {
                 color: $appbar-light-text;
