--- a/packages/default/scss/badge/_theme.scss
+++ b/packages/default/scss/badge/_theme.scss
@@ -1,7 +1,7 @@
 @include exports( "badge/theme" ) {
 
     // Solid badges
-    @each $name, $color in $theme-colors {
+    @each $name, $color in $kendo-theme-colors {
         .k-badge-solid.k-badge-#{$name} {
             border-color: $color;
             color: contrast-wcag( $color );
@@ -15,7 +15,7 @@
         background-color: $component-bg;
     }
 
-    @each $name, $color in $theme-colors {
+    @each $name, $color in $kendo-theme-colors {
         .k-badge-outline.k-badge-#{$name} {
             color: $color;
         }
