--- a/packages/default/scss/bottom-navigation/_theme.scss
+++ b/packages/default/scss/bottom-navigation/_theme.scss
@@ -1,7 +1,7 @@
 @include exports("bottom-navigation/theme") {
 
     // Solid
-    @each $name, $color in $theme-colors {
+    @each $name, $color in $kendo-theme-colors {
         .k-bottom-nav-solid.k-bottom-nav-#{$name} {
             @include fill(
                 $color: true-mix( $color, contrast-wcag( $color ), 35%),
@@ -34,7 +34,7 @@
             @include fill( $bg: rgba($bottom-nav-flat-text, .05) );
         }
 
-        @each $name, $color in $theme-colors {
+        @each $name, $color in $kendo-theme-colors {
             &.k-bottom-nav-#{$name} .k-bottom-nav-item.k-state-selected {
                 @if $name == "secondary" or $name == "light" {
                     @include fill( $color: try-shade($color, 3) );
