--- a/packages/default/scss/card/_theme.scss
+++ b/packages/default/scss/card/_theme.scss
@@ -53,7 +53,7 @@
 
 
     // Card theme colors
-    @each $name, $color in $theme-colors {
+    @each $name, $color in $kendo-theme-colors {
         .k-card-#{$name} {
             background-color: tint($color, 10);
             color: shade($color, 6);
