--- a/packages/default/scss/loader/_theme.scss
+++ b/packages/default/scss/loader/_theme.scss
@@ -1,6 +1,6 @@
 @include exports( "loader/theme" ) {
 
-    @each $name, $color in $theme-colors {
+    @each $name, $color in $kendo-theme-colors {
         .k-loader-#{$name} {
             @if $name == "secondary" {
                 color: $loader-secondary-bg;
