--- a/packages/default/scss/messagebox/_theme.scss
+++ b/packages/default/scss/messagebox/_theme.scss
@@ -1,6 +1,6 @@
 @include exports("messagebox/theme") {
 
-    @each $color-name, $color in $theme-colors {
+    @each $color-name, $color in $kendo-theme-colors {
         .k-messagebox-#{$color-name} {
             @include fill(
                 color-level( $color, $message-box-text-level ),
