--- a/packages/material/scss/_variables.scss
+++ b/packages/material/scss/_variables.scss
@@ -230,12 +230,12 @@ $dark: get-base-hue( gray, 800 ) !default;
 /// @type Color
 $light: get-base-hue( gray, 100 ) !default;
 
-/// Inverse color of the theme. Depending on the theme luminance dark or lught, it will be light or dark
+/// Inverse color of the theme. Depending on the theme luminance dark or light, it will be light or dark
 /// @group color-system
 $inverse: if( $dark-theme, $light, $dark ) !default;
 
 
-$theme-colors: (
+$kendo-theme-colors: (
     "primary": $primary,
     "secondary": $secondary,
     "tertiary": $tertiary,
@@ -271,7 +271,7 @@ $app-border: map-get($theme, component-border) !default;
 
 // Component
 /// Background color of a component.
-/// Note: do not use this variable directly. Instead derive it as `$component-name-bg` e.g. `$grid-bg: $component-bg !defualt;`.
+/// Note: do not use this variable directly. Instead derive it as `$component-name-bg` e.g. `$grid-bg: $component-bg !default;`.
 /// @group component
 $component-bg: map-get($theme, component-bg) !default;
 /// Text color of a component.
