--- a/packages/material/scss/fab/_variables.scss
+++ b/packages/material/scss/fab/_variables.scss
@@ -88,7 +88,7 @@ $kendo-fab-item-icon-height: $kendo-fab-item-icon-width !default;
 
 /// Theme colors map for the FAB.
 /// @group floating-action-button
-$kendo-fab-theme-colors: $theme-colors !default;
+$kendo-fab-theme-colors: $kendo-theme-colors !default;
 
 /// The base shadow of the FAB.
 /// @group floating-action-button
