--- a/packages/bootstrap/scss/_variables.scss
+++ b/packages/bootstrap/scss/_variables.scss
@@ -15,6 +15,7 @@ $enable-grid-classes: true !default;
 $use-calc-badge-size: true !default;
 $use-input-button-width: false !default;
 $use-input-spinner-width: false !default;
+$use-input-spinner-icon-offset: false !default;
 $use-picker-select-width: false !default;
 
 
