--- a/packages/default/scss/_variables.scss
+++ b/packages/default/scss/_variables.scss
@@ -13,6 +13,7 @@ $enable-grid-classes: true !default;
 $use-calc-badge-size: true !default;
 $use-input-button-width: true !default;
 $use-input-spinner-width: true !default;
+$use-input-spinner-icon-offset: false !default;
 $use-picker-select-width: true !default;
 
 
