--- a/packages/nouvelle/scss/_variables.scss
+++ b/packages/nouvelle/scss/_variables.scss
@@ -12,6 +12,7 @@ $enable-grid-classes: true !default;
 $use-calc-badge-size: false !default;
 $use-input-button-width: false !default;
 $use-input-spinner-width: false !default;
+$use-input-spinner-icon-offset: false !default;
 $use-picker-select-width: false !default;
 
 
