--- a/packages/material/scss/pivotgrid/_layout.scss
+++ b/packages/material/scss/pivotgrid/_layout.scss
@@ -6,4 +6,9 @@
         border-bottom-width: 0;
     }
 
+    .k-pivot .k-grid th,
+    .k-pivot .k-grid td {
+        border-left-color: inherit;
+    }
+
 }
