fix(button): font awesome icons in icon button are not properly aligned

--- a/packages/default/scss/button/_layout.scss
+++ b/packages/default/scss/button/_layout.scss
@@ -52,6 +52,10 @@
     .k-icon-button {
         aspect-ratio: 1;
         gap: 0;
+
+        .k-icon {
+            display: inline-flex;
+        }
     }
 
 
