fix(input): excess text is not properly cut
https://github.com/telerik/kendo-themes/issues/3263

--- a/packages/default/scss/colorgradient/_layout.scss
+++ b/packages/default/scss/colorgradient/_layout.scss
@@ -134,6 +134,10 @@
         .k-numerictextbox {
             width: $colorgradient-input-width;
         }
+
+        .k-input-inner {
+            text-overflow: clip;
+        }
     }
 
     // Contrast
