fix(pivotgrid): add missing padding between icon and text in pivotgrid cells

--- a/packages/bootstrap/scss/pivotgrid/_variables.scss
+++ b/packages/bootstrap/scss/pivotgrid/_variables.scss
@@ -6,6 +6,7 @@ $pivotgrid-font-family: $font-family !default;
 $pivotgrid-font-size: $font-size !default;
 $pivotgrid-line-height: $line-height !default;
 $pivotgrid-border-width: 1px !default;
+$pivotgrid-icon-spacing: 8px !default;
 
 $pivotgrid-row-header-width: 300px !default;
 $pivotgrid-column-header-height: 75px !default;
