fix(menu): set focus styles to menu items via k-focus class for keyboard navigation purposes

--- a/packages/default/scss/menu/_theme.scss
+++ b/packages/default/scss/menu/_theme.scss
@@ -80,14 +80,11 @@
                     $kendo-menu-popup-item-expanded-gradient
                 );
             }
-
-            &.k-focus {
-                @include box-shadow( $kendo-menu-popup-item-focus-shadow );
-            }
         }
 
         .k-item {
-            &:focus {
+            &:focus,
+            &.k-focus {
                 @include box-shadow( $kendo-menu-popup-item-focus-shadow );
             }
         }
