refactor: set height on surface wrapper

--- a/packages/default/scss/dataviz/_layout.scss
+++ b/packages/default/scss/dataviz/_layout.scss
@@ -2,7 +2,10 @@
 
     .k-barcode {
         display: inline-block;
-        height: 150px;
+
+        > div {
+            height: 150px;
+        }
     }
 
 }
@@ -392,7 +395,10 @@
 
     .k-qrcode {
         display: inline-block;
-        height: 150px;
+
+        > div {
+            height: 150px;
+        }
     }
 
 }
