fix(calendar): long month names overlapping in infinite calendar navigation

--- a/packages/default/scss/calendar/_layout.scss
+++ b/packages/default/scss/calendar/_layout.scss
@@ -363,6 +363,9 @@
                 line-height: $calendar-navigation-item-height;
                 cursor: pointer;
                 padding: 0 1em;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: clip;
             }
         }
 
