fix(textarea): set display to inline-flex

--- a/packages/default/scss/textarea/_layout.scss
+++ b/packages/default/scss/textarea/_layout.scss
@@ -1,8 +1,6 @@
 @include exports( "textarea/layout" ) {
 
     // Textarea
-    .k-textarea {
-        display: flex;
-    }
+    .k-textarea {}
 
 }
